@@ -1,7 +1,7 @@
 '\" t
 .\"     Title: APT-DATER
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
 .\"      Date: May 23, 2009
 .\"    Manual: [FIXME: manual]
 .\"    Source: [FIXME: source]
@@ -222,6 +222,11 @@ flash=\fItrue\fR
 Enables user notification by terminal flashing\&.
 .RE
 .SS "Section [History]"
+.PP
+ErrPattern=\fI(error|warning|fail)\fR
+.RS 4
+A regular expression pattern to match the screen output\&. A match indicates the user should be asked to review the output (using less)\&. (Optional)
+.RE
 .PP
 record=\fItrue\fR
 .RS 4
