@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><title>APT-DATER</title><meta name="generator" content="DocBook XSL Stylesheets V1.75.2"></head><body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div class="refentry" title="APT-DATER"><a name="id455366"></a><div class="titlepage"></div><div class="refnamediv"><h2>Name</h2><p>apt-dater.conf &#8212; configuration file of apt-dater(8)</p></div><div class="refsynopsisdiv" title="Synopsis"><h2>Synopsis</h2><div class="variablelist"><dl><dt></dt><dd><p><span class="symbol">[Section]</span></p></dd><dt></dt><dd><p><span class="symbol">parameter</span>=<em class="replaceable"><code>value</code></em></p></dd><dt></dt><dd><p><span class="symbol">parameter</span>=<em class="replaceable"><code>value;value;...;</code></em></p></dd></dl></div></div><div class="refsect1" title="DESCRIPTION"><a name="id454354"></a><h2>DESCRIPTION</h2><p>The file <em class="replaceable"><code>apt-dater.conf</code></em> is the
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><title>APT-DATER</title><meta name="generator" content="DocBook XSL Stylesheets V1.76.1"></head><body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div class="refentry" title="APT-DATER"><a name="idp271920"></a><div class="titlepage"></div><div class="refnamediv"><h2>Name</h2><p>apt-dater.conf &#8212; configuration file of apt-dater(8)</p></div><div class="refsynopsisdiv" title="Synopsis"><h2>Synopsis</h2><div class="variablelist"><dl><dt></dt><dd><p><span class="symbol">[Section]</span></p></dd><dt></dt><dd><p><span class="symbol">parameter</span>=<em class="replaceable"><code>value</code></em></p></dd><dt></dt><dd><p><span class="symbol">parameter</span>=<em class="replaceable"><code>value;value;...;</code></em></p></dd></dl></div></div><div class="refsect1" title="DESCRIPTION"><a name="idp298464"></a><h2>DESCRIPTION</h2><p>The file <em class="replaceable"><code>apt-dater.conf</code></em> is the
       configuration file for <span class="command"><strong>apt-dater</strong></span>(8).
       <span class="command"><strong>apt-dater</strong></span>(8) is a program to manage package updats 
       on a large number of remote hosts using SSH.
@@ -7,15 +7,17 @@
       The default location of this file is <em class="replaceable"><code>$XDG_CONFIG_HOME/apt-dater/hosts.conf</code></em>.
     </p><p>
       The syntax of the configuration file is the syntax of glib keyfiles.
-    </p></div><div class="refsect1" title="OPTIONS"><a name="id454390"></a><h2>OPTIONS</h2><div class="refsect2" title="Section [Paths]"><a name="id454396"></a><h3>Section <span class="symbol">[Paths]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">HostsFile</span>=<em class="replaceable"><code>$XDG_CONFIG_HOME/apt-dater/hosts.conf</code></em></span></dt><dd><p>The location of the file contains all host which will be managed with <span class="command"><strong>apt-dater</strong></span>. (optional)</p></dd><dt><span class="term"><span class="symbol">StatsDir</span>=<em class="replaceable"><code>$XDG_DATA_HOME/apt-dater</code></em></span></dt><dd><p>The location of the directory which contains the status files of any host. (optional)</p></dd></dl></div></div><div class="refsect2" title="Section [Screen]"><a name="id455642"></a><h3>Section <span class="symbol">[Screen]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">RCFile</span>=<em class="replaceable"><code>$XDG_CONFIG_HOME/apt-dater/screenrc</code></em></span></dt><dd><p>Location of screen(1) config file. (optional)</p></dd><dt><span class="term"><span class="symbol">Title</span>=<em class="replaceable"><code>%m # %u@%h:%p</code></em></span></dt><dd><p>Template for screen titles using string escapes. (optional)</p></dd><dt><span class="term"><span class="symbol">NoDumps</span>=<em class="replaceable"><code>false</code></em></span></dt><dd><p>Enables/disables support of screen dumps. (optional)</p></dd><dt><span class="term"><span class="symbol">QueryMaintainer</span>=<em class="replaceable"><code>0</code></em></span></dt><dd><p>If set to 1, apt-dater will ask for the maintainers name on startup. If set to 2, apt-dater will only ask if no MAINTAINER environment variable is set.</p></dd></dl></div></div><div class="refsect2" title="Section [SSH]"><a name="id455725"></a><h3>Section <span class="symbol">[SSH]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">Cmd</span>=<em class="replaceable"><code>/usr/bin/ssh</code></em></span></dt><dd><p>The location of ssh-client binary.</p></dd><dt><span class="term"><span class="symbol">SFTPCmd</span></span></dt><dd><p>The command to initiate sftp file transfer e.g. <span class="command"><strong>/usr/bin/sftp</strong></span></p></dd><dt><span class="term"><span class="symbol">OptionalCmdFlags</span></span></dt><dd><p>Additional ssh-client command flags, which will be appended.</p></dd><dt><span class="term"><span class="symbol">SpawnAgent</span>=<em class="replaceable"><code>false</code></em></span></dt><dd><p>If enabled, apt-dater tries to spawn ssh-agent(1) if none is already running. ssh-add(1) will be called to load your private keys.</p></dd><dt><span class="term"><span class="symbol">AddKeys</span></span></dt><dd><p>List of private keys which should be loaded when apt-dater calls ssh-add(1).</p></dd></dl></div></div><div class="refsect2" title="Section [Commands]"><a name="id454689"></a><h3>Section <span class="symbol">[Commands]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">CmdRefresh</span>=<em class="replaceable"><code>apt-dater-host refresh</code></em></span></dt><dd><p>The command which will be used to refresh the status of the managed host.</p></dd><dt><span class="term"><span class="symbol">CmdUpgrade</span>=<em class="replaceable"><code>apt-dater-host upgrade</code></em></span></dt><dd><p>The command which will be used to intitate a upgrade of a managed host.</p></dd><dt><span class="term"><span class="symbol">CmdInstall</span>=<em class="replaceable"><code>apt-dater-host install %s</code></em></span></dt><dd><p>The command which will be used to update a single package. <em class="replaceable"><code>%s</code></em> will be replaced by the name of the package.</p></dd></dl></div></div><div class="refsect2" title="Section [Appearance]"><a name="id454758"></a><h3>Section <span class="symbol">[Appearance]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">Colors</span></span></dt><dd><p>Set your own color style of the ui components. To highlight colors you can use the <em class="replaceable"><code>bright</code></em>* keyword.
+    </p></div><div class="refsect1" title="OPTIONS"><a name="idp302768"></a><h2>OPTIONS</h2><div class="refsect2" title="Section [Paths]"><a name="idp303440"></a><h3>Section <span class="symbol">[Paths]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">HostsFile</span>=<em class="replaceable"><code>$XDG_CONFIG_HOME/apt-dater/hosts.conf</code></em></span></dt><dd><p>The location of the file contains all host which will be managed with <span class="command"><strong>apt-dater</strong></span>. (optional)</p></dd><dt><span class="term"><span class="symbol">StatsDir</span>=<em class="replaceable"><code>$XDG_DATA_HOME/apt-dater</code></em></span></dt><dd><p>The location of the directory which contains the status files of any host. (optional)</p></dd></dl></div></div><div class="refsect2" title="Section [Screen]"><a name="idp4067472"></a><h3>Section <span class="symbol">[Screen]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">RCFile</span>=<em class="replaceable"><code>$XDG_CONFIG_HOME/apt-dater/screenrc</code></em></span></dt><dd><p>Location of screen(1) config file. (optional)</p></dd><dt><span class="term"><span class="symbol">Title</span>=<em class="replaceable"><code>%m # %u@%h:%p</code></em></span></dt><dd><p>Template for screen titles using string escapes. (optional)</p></dd><dt><span class="term"><span class="symbol">NoDumps</span>=<em class="replaceable"><code>false</code></em></span></dt><dd><p>Enables/disables support of screen dumps. (optional)</p></dd><dt><span class="term"><span class="symbol">QueryMaintainer</span>=<em class="replaceable"><code>0</code></em></span></dt><dd><p>If set to 1, apt-dater will ask for the maintainers name on startup. If set to 2, apt-dater will only ask if no MAINTAINER environment variable is set.</p></dd></dl></div></div><div class="refsect2" title="Section [SSH]"><a name="idp4077536"></a><h3>Section <span class="symbol">[SSH]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">Cmd</span>=<em class="replaceable"><code>/usr/bin/ssh</code></em></span></dt><dd><p>The location of ssh-client binary.</p></dd><dt><span class="term"><span class="symbol">SFTPCmd</span></span></dt><dd><p>The command to initiate sftp file transfer e.g. <span class="command"><strong>/usr/bin/sftp</strong></span></p></dd><dt><span class="term"><span class="symbol">OptionalCmdFlags</span></span></dt><dd><p>Additional ssh-client command flags, which will be appended.</p></dd><dt><span class="term"><span class="symbol">SpawnAgent</span>=<em class="replaceable"><code>false</code></em></span></dt><dd><p>If enabled, apt-dater tries to spawn ssh-agent(1) if none is already running. ssh-add(1) will be called to load your private keys.</p></dd><dt><span class="term"><span class="symbol">AddKeys</span></span></dt><dd><p>List of private keys which should be loaded when apt-dater calls ssh-add(1).</p></dd></dl></div></div><div class="refsect2" title="Section [Commands]"><a name="idp118000"></a><h3>Section <span class="symbol">[Commands]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">CmdRefresh</span>=<em class="replaceable"><code>apt-dater-host refresh</code></em></span></dt><dd><p>The command which will be used to refresh the status of the managed host.</p></dd><dt><span class="term"><span class="symbol">CmdUpgrade</span>=<em class="replaceable"><code>apt-dater-host upgrade</code></em></span></dt><dd><p>The command which will be used to intitate a upgrade of a managed host.</p></dd><dt><span class="term"><span class="symbol">CmdInstall</span>=<em class="replaceable"><code>apt-dater-host install %s</code></em></span></dt><dd><p>The command which will be used to update a single package. <em class="replaceable"><code>%s</code></em> will be replaced by the name of the package.</p></dd></dl></div></div><div class="refsect2" title="Section [Appearance]"><a name="idp142400"></a><h3>Section <span class="symbol">[Appearance]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">Colors</span></span></dt><dd><p>Set your own color style of the ui components. To highlight colors you can use the <em class="replaceable"><code>bright</code></em>* keyword.
           Example: Colors=menu brightgreen blue;status brightgreen blue;selector black red;</p>.
-   <p>Components are:</p><div class="variablelist"><dl><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd></dl></div><p>Colors are:</p><div class="variablelist"><dl><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd></dl></div></dd></dl></div></div><div class="refsect2" title="Section [AutoRef]"><a name="id496254"></a><h3>Section <span class="symbol">[AutoRef]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">enabled</span>=<em class="replaceable"><code>true</code></em></span></dt><dd><p>Enabled the auto refresh feature if compiled in (see README.autoref).</p></dd></dl></div></div><div class="refsect2" title="Section [Notify]"><a name="id496283"></a><h3>Section <span class="symbol">[Notify]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">bell</span>=<em class="replaceable"><code>true</code></em></span></dt><dd><p>Enables user notification by terminal bell.</p></dd><dt><span class="term"><span class="symbol">flash</span>=<em class="replaceable"><code>true</code></em></span></dt><dd><p>Enables user notification by terminal flashing.</p></dd></dl></div></div><div class="refsect2" title="Section [History]"><a name="id496329"></a><h3>Section <span class="symbol">[History]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">record</span>=<em class="replaceable"><code>true</code></em></span></dt><dd><p>Enables session recording using script(1). (Optional)</p></dd></dl></div></div><div class="refsect2" title="Section [Hooks]"><a name="id496357"></a><h3>Section <span class="symbol">[Hooks]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">PreUpdate</span>=<em class="replaceable"><code>/etc/apt-dater/pre-upg.d</code></em>, </span><span class="term"><span class="symbol">PreRefresh</span>=<em class="replaceable"><code>/etc/apt-dater/pre-ref.d</code></em>, </span><span class="term"><span class="symbol">PreInstall</span>=<em class="replaceable"><code>/etc/apt-dater/pre-ins.d</code></em>, </span><span class="term"><span class="symbol">PreConnect</span>=<em class="replaceable"><code>/etc/apt-dater/pre-con.d</code></em>, </span><span class="term"><span class="symbol">PostUpdate</span>=<em class="replaceable"><code>/etc/apt-dater/post-upg.d</code></em>, </span><span class="term"><span class="symbol">PostRefresh</span>=<em class="replaceable"><code>/etc/apt-dater/post-ref.d</code></em>, </span><span class="term"><span class="symbol">PostInstall</span>=<em class="replaceable"><code>/etc/apt-dater/post-ins.d</code></em>, </span><span class="term"><span class="symbol">PostConnect</span>=<em class="replaceable"><code>/etc/apt-dater/post-con.d</code></em></span></dt><dd><p>
+   <p>Components are:</p><div class="variablelist"><dl><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd></dl></div><p>Colors are:</p><div class="variablelist"><dl><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd><dt></dt><dd></dd></dl></div></dd></dl></div></div><div class="refsect2" title="Section [AutoRef]"><a name="idp158080"></a><h3>Section <span class="symbol">[AutoRef]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">enabled</span>=<em class="replaceable"><code>true</code></em></span></dt><dd><p>Enabled the auto refresh feature if compiled in (see README.autoref).</p></dd></dl></div></div><div class="refsect2" title="Section [Notify]"><a name="idp161664"></a><h3>Section <span class="symbol">[Notify]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">bell</span>=<em class="replaceable"><code>true</code></em></span></dt><dd><p>Enables user notification by terminal bell.</p></dd><dt><span class="term"><span class="symbol">flash</span>=<em class="replaceable"><code>true</code></em></span></dt><dd><p>Enables user notification by terminal flashing.</p></dd></dl></div></div><div class="refsect2" title="Section [History]"><a name="idp5140352"></a><h3>Section <span class="symbol">[History]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">ErrPattern</span>=<em class="replaceable"><code>(error|warning|fail)</code></em></span></dt><dd><p>
+	  A regular expression pattern to match the screen output. A match indicates
+	  the user should be asked to review the output (using less). (Optional)</p></dd><dt><span class="term"><span class="symbol">record</span>=<em class="replaceable"><code>true</code></em></span></dt><dd><p>Enables session recording using script(1). (Optional)</p></dd></dl></div></div><div class="refsect2" title="Section [Hooks]"><a name="idp5146032"></a><h3>Section <span class="symbol">[Hooks]</span></h3><div class="variablelist"><dl><dt><span class="term"><span class="symbol">PreUpdate</span>=<em class="replaceable"><code>/etc/apt-dater/pre-upg.d</code></em>, </span><span class="term"><span class="symbol">PreRefresh</span>=<em class="replaceable"><code>/etc/apt-dater/pre-ref.d</code></em>, </span><span class="term"><span class="symbol">PreInstall</span>=<em class="replaceable"><code>/etc/apt-dater/pre-ins.d</code></em>, </span><span class="term"><span class="symbol">PreConnect</span>=<em class="replaceable"><code>/etc/apt-dater/pre-con.d</code></em>, </span><span class="term"><span class="symbol">PostUpdate</span>=<em class="replaceable"><code>/etc/apt-dater/post-upg.d</code></em>, </span><span class="term"><span class="symbol">PostRefresh</span>=<em class="replaceable"><code>/etc/apt-dater/post-ref.d</code></em>, </span><span class="term"><span class="symbol">PostInstall</span>=<em class="replaceable"><code>/etc/apt-dater/post-ins.d</code></em>, </span><span class="term"><span class="symbol">PostConnect</span>=<em class="replaceable"><code>/etc/apt-dater/post-con.d</code></em></span></dt><dd><p>
 	    Hooks to be run before and after an action on a host is done.
 	    The values should be path names, any executable script within
 	    these directories will be run by <span class="command"><strong>run-parts</strong></span>(8).
-	  </p></dd></dl></div></div></div><div class="refsect1" title="STRING ESCAPES"><a name="id496445"></a><h2>STRING ESCAPES</h2><span class="command"><strong>apt-dater</strong></span>(8) provides an string escape mechanism. The escape character is '%'.
+	  </p></dd></dl></div></div></div><div class="refsect1" title="STRING ESCAPES"><a name="idp5156704"></a><h2>STRING ESCAPES</h2><span class="command"><strong>apt-dater</strong></span>(8) provides an string escape mechanism. The escape character is '%'.
 
-    <table id="id496457">List of supported escapes.<thead><tr>
+    <table id="idp5158064">List of supported escapes.<thead><tr>
         <td>escape</td>
 	<td>replaced by</td>
       </tr></thead><tbody><tr>
@@ -33,4 +35,4 @@
       </tr><tr>
         <td>u</td>
 	<td>SSH username</td>
-      </tr></tbody></table></div><div class="refsect1" title="FILES"><a name="id496528"></a><h2>FILES</h2><div class="variablelist"><dl><dt><span class="term"><em class="replaceable"><code>apt-dater.conf</code></em></span></dt><dd><p>The configuration file of apt-dater.</p></dd><dt><span class="term"><em class="replaceable"><code>hosts.conf</code></em></span></dt><dd><p>Contains all hosts you would like to manage.</p></dd></dl></div></div><div class="refsect1" title="SEE ALSO"><a name="id496566"></a><h2>SEE ALSO</h2><p>apt-dater(8), aptitude(1), apt-get(1), debtrack, screen(1), script(1), ssh(1), <a class="ulink" href="http://www.freedesktop.org/Standards/basedir-spec" target="_top">XDG Base Directory Specification</a>.</p></div></div></body></html>
+      </tr></tbody></table></div><div class="refsect1" title="FILES"><a name="idp5166640"></a><h2>FILES</h2><div class="variablelist"><dl><dt><span class="term"><em class="replaceable"><code>apt-dater.conf</code></em></span></dt><dd><p>The configuration file of apt-dater.</p></dd><dt><span class="term"><em class="replaceable"><code>hosts.conf</code></em></span></dt><dd><p>Contains all hosts you would like to manage.</p></dd></dl></div></div><div class="refsect1" title="SEE ALSO"><a name="idp5171120"></a><h2>SEE ALSO</h2><p>apt-dater(8), aptitude(1), apt-get(1), debtrack, screen(1), script(1), ssh(1), <a class="ulink" href="http://www.freedesktop.org/Standards/basedir-spec" target="_top">XDG Base Directory Specification</a>.</p></div></div></body></html>
